k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: codeserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: codeserver
    spec:
      containers:
      - name: codeserver
        image: quay.io/gpte-devops-automation/codeserver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: codeserver-volume
          mountPath: /home/codeserver
      restartPolicy: Always
      volumes:
      - name: codeserver-volume
        persistentVolumeClaim:
          claimName: codeserver
