k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeserver
spec:
  ports:
  - name: codeserver
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: codeserver
  sessionAffinity: None
  type: ClusterIP
