k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: codeserver
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: codeserver
    weight: 100
  wildcardPolicy: None
